--- a/DummyAPIDataUploader/DummyAPIDataUploader.csproj
+++ b/DummyAPIDataUploader/DummyAPIDataUploader.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Syncfusion.XlsIO.Net.Core" Version="24.1.44" />
   </ItemGroup>
 
 </Project>
